# math

./: Cargo.toml  LICENSE  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
src/: abs.rs  abs_diff.rs  add.rs  lib.rs
src/abs/: tests.rs
src/abs_diff/: tests.rs
src/add/: tests.rs
tests/: abs.rs  abs_diff.rs  add.rs
