[package]
name = "chaff-math"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Small math utilities (add, absolute difference)."
license = "MIT"
repository = "https://github.com/chaffRs/math"
readme = "README.md"
keywords = ["math", "abs", "numeric"]
categories = ["mathematics", "no-std"]



[dependencies]
